# rust_playground

./: Cargo.toml  README.md  rustfmt.toml  taplo.toml
rust-handson/: 3-27.rs  3-29.rs  3-31.rs  3-32.rs  3-33.rs  3-34.rs  3-35.rs  3-36.rs  3-38.rs  3-39.rs  3-44.rs  3-47.rs
rust-handson/chapter-3/: 3-22.rs  3-27.rs  3-32.rs  3-33.rs  3-34.rs  3-36.rs  3-38.rs  3-48.rs
rust-handson/chapter-4/: 4-10.rs  4-2.rs  4-4.rs  4-7.rs
