[package]
edition = "2021"
name    = "rust_playground"
version = "0.1.0"

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "handson-3-21"
path = "rust-handson/3-21.rs"

[[bin]]
name = "handson-3-22"
path = "rust-handson/3-22.rs"

[[bin]]
name = "handson-3-23"
path = "rust-handson/3-23.rs"

[[bin]]
name = "handson-3-24"
path = "rust-handson/3-24.rs"

[[bin]]
name = "handson-3-25"
path = "rust-handson/3-25.rs"

[[bin]]
name = "handson-3-26"
path = "rust-handson/3-26.rs"

[[bin]]
name = "handson-3-27"
path = "rust-handson/3-27.rs"

[[bin]]
name = "handson-3-29"
path = "rust-handson/3-29.rs"

[[bin]]
name = "handson-3-31"
path = "rust-handson/3-31.rs"

[[bin]]
name = "handson-3-32"
path = "rust-handson/3-32.rs"

[[bin]]
name = "handson-3-33"
path = "rust-handson/3-33.rs"

[[bin]]
name = "handson-3-34"
path = "rust-handson/3-34.rs"

[[bin]]
name = "handson-3-35"
path = "rust-handson/3-35.rs"
